packages/cashc/test/compiler/ParseError/full_iso_date.cash
pragma cashscript ^0.6.0;

contract Test() {
    function test() {
        require(tx.time >= date("2021-03-03T05:30:00.000Z"));
    }
}
